[gd_scene load_steps=24 format=3 uid="uid://3h30cnlm20gf"]

[ext_resource type="Texture2D" uid="uid://wd3ik4ogymek" path="res://sprites/slime_green.png" id="1_a6n7v"]
[ext_resource type="Script" path="res://scripts/menu/player/green_slime.gd" id="1_ppwvm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qd46r"]
atlas = ExtResource("1_a6n7v")
region = Rect2(0, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_dye1s"]
atlas = ExtResource("1_a6n7v")
region = Rect2(24, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_jes36"]
atlas = ExtResource("1_a6n7v")
region = Rect2(72, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mik3"]
atlas = ExtResource("1_a6n7v")
region = Rect2(48, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_uuves"]
atlas = ExtResource("1_a6n7v")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_lwdtl"]
atlas = ExtResource("1_a6n7v")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8eiwg"]
atlas = ExtResource("1_a6n7v")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhan1"]
atlas = ExtResource("1_a6n7v")
region = Rect2(72, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rwiu"]
atlas = ExtResource("1_a6n7v")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wfpj"]
atlas = ExtResource("1_a6n7v")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wgfb2"]
atlas = ExtResource("1_a6n7v")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbsts"]
atlas = ExtResource("1_a6n7v")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hbje8"]
atlas = ExtResource("1_a6n7v")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_65co0"]
atlas = ExtResource("1_a6n7v")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wlwko"]
atlas = ExtResource("1_a6n7v")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_k6rvo"]
atlas = ExtResource("1_a6n7v")
region = Rect2(0, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_2fxjo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qd46r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dye1s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jes36")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mik3")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uuves")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lwdtl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8eiwg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhan1")
}],
"loop": true,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7rwiu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wfpj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wgfb2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbsts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbje8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65co0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wlwko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k6rvo")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jdetr"]
size = Vector2(14, 15)

[sub_resource type="CircleShape2D" id="CircleShape2D_rqagm"]
radius = 72.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8nqoy"]
size = Vector2(14, 4.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5lyi3"]
size = Vector2(16, 13)

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_ppwvm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_2fxjo")
animation = &"death"
frame = 2
frame_progress = 0.705599

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4.5)
shape = SubResource("RectangleShape2D_jdetr")

[node name="Detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
shape = SubResource("CircleShape2D_rqagm")

[node name="Death" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Death"]
position = Vector2(0, -3.875)
shape = SubResource("RectangleShape2D_8nqoy")

[node name="Damage" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Damage"]
position = Vector2(0, 5.5)
shape = SubResource("RectangleShape2D_5lyi3")

[connection signal="body_entered" from="Detector" to="." method="_on_detector_body_entered"]
[connection signal="body_entered" from="Death" to="." method="_on_death_body_entered"]
[connection signal="body_entered" from="Damage" to="." method="_on_damage_body_entered"]
